Adds sponsor slider

--- a/src/pages/sponsoring.astro
+++ b/src/pages/sponsoring.astro
@@ -3,12 +3,15 @@ import ActivityText from "../components/sponsoringPage/activityText.astro";
 import BannerImage from "../components/sponsoringPage/bannerImage.astro";
 import Footer from "../components/sponsoringPage/footer.astro";
 import IntroText from "../components/sponsoringPage/introText.astro";
+import SponsorCarousel from "../components/sponsoringPage/sponsorCarousel.astro";
 import NavButtons from "../components/sponsoringPage/navButtons.astro";
 import SponsoringPage from "../layouts/sponsoringPage.astro";
 ---
 
 <SponsoringPage>
   <IntroText />
+
+  <SponsorCarousel></SponsorCarousel>
 
   <ActivityText />
 
