--- a/src/components/sponsoringPage/sponsorCarousel.astro
+++ b/src/components/sponsoringPage/sponsorCarousel.astro
@@ -1,19 +1,60 @@
 ---
-import SponsorSlider from "./sponsors/sponsorSlider.astro";
-import { SponsorList } from "./sponsors/types";
+import SponsorContainer from "./sponsors/sponsorContainer.astro";
+import { SponsorListLevel1, SponsorListLevel2 } from "./sponsors/types";
 
 
 ---
 <div
-  class="lg:items-begin my-16 flex flex-col items-center justify-center lg:flex-row"
+  class="lg:items-begin my-16 items-center justify-center w-full p-10"
 >
-  <div class=" max-w-4xl flex-col">
-    <h1
-      class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
-    >
-      Our sponsors
-    </h1>
-    <SponsorSlider sponsors = {SponsorList}></SponsorSlider>
+  <h1
+  class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+  >
+  Our sponsors
+  </h1>
+  <div
+    class="lg:items-begin my-16 items-center justify-center w-full space-y-28"
+  >
+    <div class=" min-w-4xl">
+      <h1
+        class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      >
+        Platinum
+      </h1>
+      <SponsorContainer sponsors = {SponsorListLevel1} level = {1}></SponsorContainer>
+    </div>
+    <div class=" min-w-4xl">
+      <h1
+        class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      >
+        Gold
+      </h1>
+      <SponsorContainer sponsors = {SponsorListLevel2} level = {2}></SponsorContainer>
+    </div>
+    <div class=" min-w-4xl">
+      <h1
+        class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      >
+        Silver
+      </h1>
+      <SponsorContainer sponsors = {SponsorListLevel1} level = {3}></SponsorContainer>
+    </div>
+    <div class=" min-w-4xl">
+      <h1
+        class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      >
+        Bronze
+      </h1>
+      <SponsorContainer sponsors = {SponsorListLevel1} level = {3}></SponsorContainer>
+    </div>
+    <div class=" min-w-4xl">
+      <h1
+        class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      >
+        Supporter
+      </h1>
+      <SponsorContainer sponsors = {SponsorListLevel1} level = {3}></SponsorContainer>
+    </div>
   </div>
   <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
 </div>
