--- a/src/components/sponsoringPage/sponsors/sponsorCard.astro
+++ b/src/components/sponsoringPage/sponsors/sponsorCard.astro
@@ -10,21 +10,38 @@ const {
     level,
 } = Astro.props as Sponsor;
 
-let level1style = "bg-dnt-orange-200 hover:no-underline";
 let level2style = "bg-white/10 hover:bg-white/20 hover:no-underline";
+
+let articlestyle = " ";
+let imsize = '100';
+
+if (level == 1) {
+  imsize = '120'
+  articlestyle = "bg-primary/50 hover:bg-primary/20 hover:no-underline";
+} else if (level == 2) {
+  articlestyle = "bg-primary/10 hover:bg-primary/5 hover:no-underline";
+}
+
+let namesize = "text-sm"
 ---
 
+<a
+        href={`${url}`}
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-sm hover:text-[#1da1f2] sm:text-base"
+      >
 <article
-  class=`flex flex-wrap items-start rounded-lg border border-dnt-orange-200/20 bg-cover px-4 pb-1 pt-4 transition-colors hover:border-dnt-orange-300/50 ${level == 1 ? level1style : level2style}`
+  class=`flex flex-wrap items-start rounded-lg border border-dnt-orange-200/20 bg-cover px-4 p-4 transition-colors hover:border-dnt-orange-300/50 ${articlestyle}`
 >
   <Image
     src={logo}
-    width={100}
-    height={100}
-    class="mr-3 h-30 w-30 bg-white"
+    width={imsize}
+    height={imsize}
+    class=`mr-3 h-${imsize} w-${imsize} bg-white pr-10`
     alt={`@${name}'s logo`}
   />
-  <div class="flex flex-1 flex-wrap justify-start">
+  <div class="flex flex-1 flex-wrap justify-start pl-10">
     <h3 class="mr-2 font-bold hover:underline">
       <a
         href={`${url}`}
@@ -35,6 +52,6 @@ let level2style = "bg-white/10 hover:bg-white/20 hover:no-underline";
         {name}
       </a>
     </h3>
-    <p class="my-1 whitespace-pre-line text-sm xl:text-base truncate h-48">{description}</p>
+    <p class="my-1 whitespace-pre-line text-sm xl:text-base truncate">{description}</p>
   </div>
 </article>
