--- a/src/components/sponsoringPage/introText.astro
+++ b/src/components/sponsoringPage/introText.astro
@@ -4,22 +4,52 @@
 <div
   class="lg:items-begin my-16 flex flex-col items-center justify-center lg:flex-row"
 >
-  <div class=" max-w-4xl flex-col">
+  <div class="flex max-w-4xl flex-col align-center">
     <h1
       class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
     >
-      Sponsor us
+      Who are we
     </h1>
     <h2>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Fusce pretium velit diam, nec semper lorem scelerisque vel.
-      Aenean luctus vehicula erat, at dictum quam accumsan sed.
-      Aliquam vestibulum, elit quis eleifend volutpat, velit orci mattis nunc,
-      eu lacinia lacus nibh eu lorem. Nullam euismod lobortis venenatis.
-      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-      cubilia curae; Quisque id volutpat lacus. Duis tincidunt
-      odio ut arcu aliquet faucibus.
+      We are a team of ambitious bachelor and master students from the University of Amsterdam which programs NAO robots to autonomously play football using Artificial Intelligence (AI).
+      We participate in competitions worldwide, with the RoboCup being our primary focus. Our team is based in the Intelligent Robotics Lab in LAB42. Here we spend many hours on engineering and research.
     </h2>
+
+    <h1
+      class="mb-2 mt-5 text-center text-3xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+    >
+      Our goals
+    </h1>
+    <p>
+      The foundation Dutch Nao Team has four main goals.
+    </p>
+      <div class=" w-full flex-col">
+        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+          Innovation
+        </h3>
+        <p>By leveraging state of the art AI research, we aim to improve the performance of our robots. We make use of the novel programming language Rust, to create fast and reliable software.</p>
+        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+          Education
+        </h3>
+        <p>In addition to our competitive goals we strive to educate people less familiar with robotics and inspire upcoming students to choose a degree related to AI and computer science. To realise this we give demonstrations, workshops and talks at events to children and adults with varying background knowledge.</p>
+        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+          Professional cultivation
+        </h3>
+        <p>We enable students to gain experience in robotics and AI. We work in close collaboration with researchers and provide members and other students with projects and theses to develop their academic skills. Our team of 30 students presents a great amount of organizational challenges which provide students with the opportunity to develop their management skills.</p>
+        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+          AI (robotics) community
+        </h3>
+        <p>We aspire to bring people together who are excited about robotics and AI. Our team is a great place to meet like-minded people and we connect different generations using our alumni network.</p>
+      </div>
+
+    <h2
+      class="mb-2 mt-5 text-center text-3xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+    >
+      Why sponsor us?
+    </h2>
+    <p>
+      As a foundation we are dependent on donations. By sponsoring us you will help us to continue achieving our goals and expand upon them. You will contribute to innovation, education, creating a learning environment and bringing like-minded people together. In addition to this your organization will get featured on our shirts, website, lab, social media, venues and more. And last but not least you get to connect with top tier, ambitious students in the field of AI and computer science for internships, working students and post graduate jobs.
+    </p>
   </div>
   <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
 </div>
