--- a/src/components/sponsoringPage/sponsorCarousel.astro
+++ b/src/components/sponsoringPage/sponsorCarousel.astro
@@ -1,6 +1,6 @@
 ---
 import SponsorContainer from "./sponsors/sponsorContainer.astro";
-import { SponsorListLevel1, SponsorListLevel2, SponsorListLevel3,  SponsorListLevel4} from "./sponsors/types";
+import { SponsorListLevel1, SponsorListLevel2, SponsorListLevel3,  SponsorListLevel4} from "../../utils/sponsors";
 
 
 ---
