--- a/src/components/sponsoringPage/introText.astro
+++ b/src/components/sponsoringPage/introText.astro
@@ -24,22 +24,22 @@
       The foundation Dutch Nao Team has four main goals.
     </p>
       <div class=" w-full flex-col">
-        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
           Innovation
-        </h3>
-        <p>By leveraging state of the art AI research, we aim to improve the performance of our robots. We make use of the novel programming language Rust, to create fast and reliable software.</p>
-        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+        </h2>
+        <p class="ml-3.5">By leveraging state of the art AI research, we aim to improve the performance of our robots. We make use of the novel programming language Rust, to create fast and reliable software.</p>
+        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
           Education
-        </h3>
-        <p>In addition to our competitive goals we strive to educate people less familiar with robotics and inspire upcoming students to choose a degree related to AI and computer science. To realise this we give demonstrations, workshops and talks at events to children and adults with varying background knowledge.</p>
-        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+        </h2>
+        <p class="ml-3.5">In addition to our competitive goals we strive to educate people less familiar with robotics and inspire upcoming students to choose a degree related to AI and computer science. To realise this we give demonstrations, workshops and talks at events to children and adults with varying background knowledge.</p>
+        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
           Professional cultivation
-        </h3>
-        <p>We enable students to gain experience in robotics and AI. We work in close collaboration with researchers and provide members and other students with projects and theses to develop their academic skills. Our team of 30 students presents a great amount of organizational challenges which provide students with the opportunity to develop their management skills.</p>
-        <h3 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
+        </h2>
+        <p class="ml-3.5">We enable students to gain experience in robotics and AI. We work in close collaboration with researchers and provide members and other students with projects and theses to develop their academic skills. Our team of 30 students presents a great amount of organizational challenges which provide students with the opportunity to develop their management skills.</p>
+        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
           AI (robotics) community
-        </h3>
-        <p>We aspire to bring people together who are excited about robotics and AI. Our team is a great place to meet like-minded people and we connect different generations using our alumni network.</p>
+        </h2>
+        <p class="ml-3.5">We aspire to bring people together who are excited about robotics and AI. Our team is a great place to meet like-minded people and we connect different generations using our alumni network.</p>
       </div>
 
     <h2
