name change, only show logos

--- a/src/components/navigation/navbar.astro
+++ b/src/components/navigation/navbar.astro
@@ -35,9 +35,9 @@ const navbarLinks: Array<{
     label: "Publications",
   },
   {
-    pattern: new RegExp("^/sponsoring"),
-    href: "/sponsoring",
-    label: "Sponsoring",
+    pattern: new RegExp("^/partnerships"),
+    href: "/partnerships",
+    label: "Partnerships",
   },
   {
     pattern: new RegExp("^/en"),
