--- a/src/components/partnershipsPage/partnerCarousel.astro
+++ b/src/components/partnershipsPage/partnerCarousel.astro
@@ -9,7 +9,7 @@ import { PartnerListLevel1, PartnerListLevel2, PartnerListLevel3,  PartnerListLe
   class="lg:items-begin my-16 items-center justify-center w-full p-10"
 >
   <h1
-  class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+  class="mb-2 text-center text-5xl font-bold text-partner-text"
   >
   Our partners
   </h1>
