--- a/src/components/partnershipsPage/partners/partnerContainer.astro
+++ b/src/components/partnershipsPage/partners/partnerContainer.astro
@@ -28,14 +28,14 @@ if (level == PartnerLevels.Platinum) {
 
 <div class=`${height}`>
   <h1
-        class="mb-2 text-center text-3xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+        class="mb-2 text-center text-3xl font-bold text-partner-text"
       >
         {levelName}
       </h1>
   <div class=`flex w-full content-center ${levelstyleOuter}`>
     <p class=`${partners.length == 0 ? " " : "hidden"}`>We don't have partners in this catogory yet. Do you want to be the first? Mail at: <a
       href="mailto:info@dutchnaoteam.nl"
-      class="text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white"
+      class="text-black underline hover:text-partner-text hover:decoration-wavy dark:text-white"
       >info@dutchnaoteam.nl</a
     ></p>
     {
