--- a/src/components/partnershipsPage/introText.astro
+++ b/src/components/partnershipsPage/introText.astro
@@ -1,55 +1,62 @@
 ---
+import worldSVG from "../../svgs/earth_line.svg"
+import codeSVG from "../../svgs/code_fill.svg"
+import handSVG from "../../svgs/hand_heart_line.svg"
+import pinSVG from "../../svgs/pin_fill.svg"
+import cupSVG from "../../svgs/teacup_line.svg"
 ---
 
 <div
-  class="lg:items-begin my-16 flex flex-col items-center justify-center lg:flex-row"
+  class="lg:items-begin my-16 flex flex-col items-center justify-center"
 >
-  <div class="flex max-w-4xl flex-col align-center">
     <h1
-      class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      class="mb-8 text-center text-5xl font-bold text-partner-text dark:text-dnt-orange-400"
     >
-      Who are we
+      Partnerships
     </h1>
-    <h2>
-      We are a team of ambitious bachelor and master students from the University of Amsterdam which programs NAO robots to autonomously play football using Artificial Intelligence (AI).
-      We participate in competitions worldwide, with the RoboCup being our primary focus. Our team is based in the Intelligent Robotics Lab in LAB42. Here we spend many hours on engineering and research.
-    </h2>
-
-    <h1
-      class="mb-2 mt-5 text-center text-3xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
-    >
-      Our goals
-    </h1>
-    <p>
-      The foundation Dutch Nao Team has four main goals.
-    </p>
-      <div class=" w-full flex-col">
-        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
-          Innovation
-        </h2>
-        <p class="ml-3.5">By leveraging state of the art AI research, we aim to improve the performance of our robots. We make use of the novel programming language Rust, to create fast and reliable software.</p>
-        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
-          Education
-        </h2>
-        <p class="ml-3.5">In addition to our competitive goals we strive to educate people less familiar with robotics and inspire upcoming students to choose a degree related to AI and computer science. To realise this we give demonstrations, workshops and talks at events to children and adults with varying background knowledge.</p>
-        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
-          Professional cultivation
-        </h2>
-        <p class="ml-3.5">We enable students to gain experience in robotics and AI. We work in close collaboration with researchers and provide members and other students with projects and theses to develop their academic skills. Our team of 30 students presents a great amount of organizational challenges which provide students with the opportunity to develop their management skills.</p>
-        <h2 class="mb-2 mt-3 text-md font-bold text-dnt-orange-500 dark:text-dnt-orange-400">
-          AI (robotics) community
-        </h2>
-        <p class="ml-3.5">We aspire to bring people together who are excited about robotics and AI. Our team is a great place to meet like-minded people and we connect different generations using our alumni network.</p>
+    <div class = "flex flex-col align-center w-5/6 justify-between md:flex-row">
+      <div class ="flex flex-col items-center justify-center" id="connect">
+        <img
+        src={worldSVG}
+        alt="SVG of the world"
+        >
+        <p class="w-2/3 mt-5">
+          Make meaningfull <span class="text-partner-text">connections</span> by becoming our partner.
+          From students to businesses, you will increase the network of your organization.
+        </p>
       </div>
-
-    <h2
-      class="mb-2 mt-5 text-center text-3xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
-    >
-      Why sponsor us?
-    </h2>
-    <p>
-      As a foundation we are dependent on donations. By sponsoring us you will help us to continue achieving our goals and expand upon them. You will contribute to innovation, education, creating a learning environment and bringing like-minded people together. In addition to this your organization will get featured on our shirts, website, lab, social media, venues and more. And last but not least you get to connect with top tier, ambitious students in the field of AI and computer science for internships, working students and post graduate jobs.
-    </p>
-  </div>
+      <div class ="flex flex-col items-center justify-center" id="give">
+        <img
+        src={handSVG}
+        alt="SVG representing giving"
+        >
+        <p class="w-2/3 mt-5">
+          By becoming our partner, you <span class="text-partner-text">invest</span> in innovation, research and education.
+          Together we will achieve better <span class="text-partner-text">education</span>, work on <span class="text-partner-text">research</span> and <span class="text-partner-text">innovate</span> in the field of robotics.
+        </p>
+      </div>
+      <div class ="flex flex-col items-center justify-center" id="code">
+        <img
+        src={codeSVG}
+        alt="SVG of code"
+        >
+        <p class="w-2/3 mt-5">
+          Technology is the basis of our society. In collaberating with us,
+          your organization will support new <span class="text-partner-text">technologies</span>
+          that can change our way of living.
+        </p>
+      </div>
+      <div class ="flex flex-col items-center justify-center" id="pin">
+        <img
+        src={pinSVG}
+        alt="SVG of the world"
+        >
+        <p class="w-2/3 mt-5">
+          Put your organization in the <span class="text-partner-text">spot-light</span> at
+          important events. Make sure the name of your organization is known accross the sector of
+          <span class="text-partner-text">robotics</span> by collaberating with us.
+        </p>
+      </div>
+    </div>
   <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
 </div>
